--- a/src/sass/frontend/dashboard.scss
+++ b/src/sass/frontend/dashboard.scss
@@ -83,3 +83,12 @@
  	margin-left: 240px;
 	overflow: hidden;
  }
+
+ //// employer dashboard /// /
+ .card-body {
+ 	.opalmembership-box {
+ 		h3 {
+ 			display:none;
+ 		}
+ 	}
+ }
