--- a/assets/css/frontend/frontend.css
+++ b/assets/css/frontend/frontend.css
@@ -5266,7 +5266,7 @@ a.text-dark:hover, a.text-dark:focus {
   .white-popup .submit a {
     display: block;
     margin-top: 10px; }
-  .white-popup .opalestate-button {
+  .white-popup .opaljob-button {
     padding: 17px 35px 14px 35px;
     width: 100%; }
 
