--- a/src/sass/frontend/components/_popup.scss
+++ b/src/sass/frontend/components/_popup.scss
@@ -48,7 +48,7 @@
       margin-top: 10px;
     }
   }
-  .opalestate-button{
+  .opaljob-button{
     padding: 17px 35px 14px 35px;
     width: 100%;
   }
